--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <section class="page-header">
+      <span class="logo"></span>
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
