wrong file type

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,5 @@
 .page-header{
-  background-image: url(/assets/concrete.png);
+  background-image: url(/assets/concrete.jpg);
   position: relative;
 }
 
