--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,10 +19,11 @@
   background-size: 40px 40px;
   background-position: left center;
   background-repeat: no-repeat;
-  padding-left: 55px;
+  padding-left: 50px;
   white-space: nowrap;
   overflow:hidden;
-  width: 80%
+  width: 80%;
+  display: block;
 }
 
 .site-nav{
