--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,9 +17,9 @@
 {% endif %}
 
 {% if page.image.thumb %}
-  <meta name="twitter:image" content="{{ site.urlimg }}/{{ page.image.thumb }}">
+  <meta name="twitter:image" content="{{ site.url }}/{{ page.image.thumb }}">
 {% else %}
-  <meta name="twitter:image" content="{{ site.urlimg }}/assets/logo.png">
+  <meta name="twitter:image" content="{{ site.url }}/assets/logo.png">
 {% endif %}
   <!-- Twitter End -->
 
