--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,11 @@
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   <!-- Twitter Start -->
+{% if page.summary_type %}
+  <meta name="twitter:card" content="{{ page.summary_type }}">
+{% else %}
   <meta name="twitter:card" content="summary">
+{% endif %}  
   <meta name="twitter:site" content="@vandsh">
   <meta name="twitter:title" content="{{ page.title }}">
 {% if page.description %}
@@ -17,7 +21,7 @@
 {% endif %}
 
 {% if page.image.thumb %}
-  <meta name="twitter:image" content="{{ site.url }}/{{ page.image.thumb }}">
+  <meta name="twitter:image" content="{{ site.url }}/{{ page.thumbnail }}">
 {% else %}
   <meta name="twitter:image" content="{{ site.url }}/assets/logo.png">
 {% endif %}
