--- a/assets/main.scss
+++ b/assets/main.scss
@@ -14,6 +14,11 @@
 
 }
 
+.wrapper{
+  max-width: -webkit-calc(1000px - (30px * 2));
+  max-width: calc(1000px - (30px * 2));
+}
+
 .site-title{
   background-image: url(/assets/logo_small.png);
   background-size: 40px 40px;
