--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,7 @@
 {% endif %}
 
 {% if page.image %}
-  <meta name="twitter:image" content="{{ site.url }}/{{ page.image }}">
+  <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
 {% else %}
   <meta name="twitter:image" content="{{ site.url }}/assets/logo.png">
 {% endif %}
