--- a/assets/main.scss
+++ b/assets/main.scss
@@ -136,7 +136,9 @@ A{
     color: #aaa;
     text-shadow: 0 0 20px #777, 0 0 10px #666677, 0 0 2px #222223;
   }
-
+  .post-title{
+    text-shadow: 0 0 20px #777, 0 0 10px #666677, 0 0 2px #222223;
+  }
   .post-content{
     text-shadow: 0 0 25px #bbb, 0 0 10px #335, 0 0 2px #225;
   }
