--- a/assets/main.scss
+++ b/assets/main.scss
@@ -60,6 +60,11 @@ body{
     right: 16px;
     font-size: 10px;
     cursor: pointer;
+    color: #f92aad;
+    background: black;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid white;
   }
 }
 
