fix tiny things

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -116,6 +116,10 @@ body{
 .highlighter-rouge .highlight{
   background: #222; 
   .highlight{
+
+    .err{
+	background: none;
+    }
     .nc
     {
       color: #596fb2;
