--- a/assets/main.scss
+++ b/assets/main.scss
@@ -125,11 +125,11 @@ body{
       color: #596fb2;
     }
     .nt{
-      color: blue;
+      color: #E16222;
     }
     .nf
     {
-      color: #b20000;
+      color: #E16222;
     }
     .s
     {
