--- a/assets/main.scss
+++ b/assets/main.scss
@@ -208,3 +208,119 @@ A{
   }
 }
 
+.blinking-cursor {
+  font-size: 28px;
+  color: #eee;
+  display: block;
+  position: absolute;
+  bottom: -5px;
+  -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
+}
+
+@keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #eee;
+  }
+}
+
+@-moz-keyframes blink {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #eee;
+  }
+}
+
+@-webkit-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #eee;
+  }
+}
+
+@-ms-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #eee;
+  }
+}
+
+@-o-keyframes "blink" {
+  from, to {
+    color: transparent;
+  }
+  50% {
+    color: #eee;
+  }
+}
+
+.retro::after {
+  content: " ";
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(18, 16, 16, 0.1);
+  opacity: 0;
+  z-index: 2;
+  pointer-events: none;
+  animation: flicker 0.10s infinite;
+}
+
+@keyframes flicker {
+  0%    { opacity: 0.27861; }
+  5%    { opacity: 0.34769; }
+  10%   { opacity: 0.23604; }
+  15%   { opacity: 0.50626; }
+  20%   { opacity: 0.18128; }
+  25%   { opacity: 0.23891; }
+  30%   { opacity: 0.45583; }
+  35%   { opacity: 0.57807; }
+  40%   { opacity: 0.26559; }
+  45%   { opacity: 0.54693; }
+  50%   { opacity: 0.46019; }
+  55%   { opacity: 0.08594; }
+  60%   { opacity: 0.20313; }
+  65%   { opacity: 0.61988; }
+  70%   { opacity: 0.53455; }
+  75%   { opacity: 0.67288; }
+  80%   { opacity: 0.71428; }
+  85%   { opacity: 0.70419; }
+  90%   { opacity: 0.70030; }
+  95%   { opacity: 0.36108; }
+  100%  { opacity: 0.24387; }
+}
+
+.retro .scan-line {
+  width: 100%;
+  height: 100px;
+  z-index: 8;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%,
+    rgba(255, 255, 255, 0.2) 10%,
+    rgba(0, 0, 0, 0.1) 100%);
+  opacity: 0.1;
+  position: absolute;
+  bottom: 100%;
+  pointer-events: none;
+  animation: scan-line 20s linear infinite;
+}
+
+@keyframes scan-line {
+  0%    { bottom: 100%; }
+  80%   { bottom: 100%; }
+  100%  { bottom: -20%; }
+}
